--- a/plugins-fixed/calf-bad.lv2/modgui/Filterclavier/icon-calf-filterclavier.css
+++ b/plugins-fixed/calf-bad.lv2/modgui/Filterclavier/icon-calf-filterclavier.css
@@ -1,6 +1,6 @@
 /* Global */
 .calf {
-    background: url(/resources/background_dark.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_dark.png{{{ns}}}) repeat;
     position: relative;
     color: #FFF;
 }
@@ -11,7 +11,7 @@
 /* bar top */
 
 .calf .bar-top {
-    background: url(/resources/background_black.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_black.png{{{ns}}}) repeat;
     height: 46px;
     left: 0;
     position: relative;
@@ -27,7 +27,7 @@
     top: 13px;
 }
 .calf .bar-top .off-or-on-calf {
-    background-image: url(/resources/toggle2_silver.png{{{ns}}});
+    background-image: url(/resources/img/toggle2_silver.png{{{ns}}});
     background-size: 46px 62px;
     cursor: pointer;
     height: 31px;
@@ -62,7 +62,7 @@
 
 /*bars left*/
 .calf .groups-bar-left {
-    background: url(/resources/side_w.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_w.png{{{ns}}}) repeat-y;
     bottom: 0;
     left: 0;
     position: absolute;
@@ -71,7 +71,7 @@
 }
 
 .calf .groups-bar-left .top {
-    background: url(/resources/side_nw.png{{{ns}}});
+    background: url(/resources/img/side_nw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -79,7 +79,7 @@
     width: 56px;
 }
 .calf .groups-bar-left .bottom {
-    background: url(/resources/side_sw.png{{{ns}}});
+    background: url(/resources/img/side_sw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -89,7 +89,7 @@
 
 /* bars right */
 .calf .groups-bar-right {
-    background: url(/resources/side_e.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_e.png{{{ns}}}) repeat-y;
     bottom: 0;
     right: 0;
     position: absolute;
@@ -98,7 +98,7 @@
 }
 
 .calf .groups-bar-right .top {
-    background: url(/resources/side_ne.png{{{ns}}});
+    background: url(/resources/img/side_ne.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -107,7 +107,7 @@
 }
 
 .calf .groups-bar-right .bottom {
-    background: url(/resources/side_se.png{{{ns}}});
+    background: url(/resources/img/side_se.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -115,7 +115,7 @@
     width: 56px;
 }
 .calf .groups-bar-right .logo {
-    background: url(/resources/side_e_logo.png{{{ns}}});
+    background: url(/resources/img/side_e_logo.png{{{ns}}});
     height: 90px;
     left: 0;
     position: absolute;
@@ -150,22 +150,22 @@
     width: 20px;
 }
 .calf .knob1-1 {
-    background: url(/resources/knob1-1.png{{{ns}}});
+    background: url(/resources/img/knob1-1.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-2 {
-    background: url(/resources/knob1-2.png{{{ns}}});
+    background: url(/resources/img/knob1-2.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-3 {
-    background: url(/resources/knob1-3.png{{{ns}}});
+    background: url(/resources/img/knob1-3.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-4 {
-    background: url(/resources/knob1-4.png{{{ns}}});
+    background: url(/resources/img/knob1-4.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
@@ -174,51 +174,51 @@
     width: 40px;
 }
 .calf .knob2-1 {
-    background: url(/resources/knob2-1.png{{{ns}}});
+    background: url(/resources/img/knob2-1.png{{{ns}}});
 }
 .calf .knob2-2 {
-    background: url(/resources/knob2-2.png{{{ns}}});
+    background: url(/resources/img/knob2-2.png{{{ns}}});
 }
 .calf .knob2-3 {
-    background: url(/resources/knob2-3.png{{{ns}}});
+    background: url(/resources/img/knob2-3.png{{{ns}}});
 }
 .calf .knob2-4 {
-    background: url(/resources/knob2-4.png{{{ns}}});
+    background: url(/resources/img/knob2-4.png{{{ns}}});
 }
 .calf .knob3 {
-    background: url(/resources/knob3.png{{{ns}}});
+    background: url(/resources/img/knob3.png{{{ns}}});
 }
 .calf .knob4 {
     height: 80px;
     width: 80px;
 }
 .calf .knob4-1 {
-    background: url(/resources/knob4-1.png{{{ns}}});
+    background: url(/resources/img/knob4-1.png{{{ns}}});
 }
 .calf .knob4-2 {
-    background: url(/resources/knob4-2.png{{{ns}}});
+    background: url(/resources/img/knob4-2.png{{{ns}}});
 }
 .calf .knob4-3 {
-    background: url(/resources/knob4-3.png{{{ns}}});
+    background: url(/resources/img/knob4-3.png{{{ns}}});
 }
 .calf .knob4-4 {
-    background: url(/resources/knob4-4.png{{{ns}}});
+    background: url(/resources/img/knob4-4.png{{{ns}}});
 }
 .calf .knob5 {
     height: 100px;
     width: 100px;
 }
 .calf .knob5-1 {
-    background: url(/resources/knob5-1.png{{{ns}}});
+    background: url(/resources/img/knob5-1.png{{{ns}}});
 }
 .calf .knob5-2 {
-    background: url(/resources/knob5-2.png{{{ns}}});
+    background: url(/resources/img/knob5-2.png{{{ns}}});
 }
 .calf .knob5-3 {
-    background: url(/resources/knob5-3.png{{{ns}}});
+    background: url(/resources/img/knob5-3.png{{{ns}}});
 }
 .calf .knob5-4 {
-    background: url(/resources/knob5-4.png{{{ns}}});
+    background: url(/resources/img/knob5-4.png{{{ns}}});
 }
 
 /* titles of things */
@@ -229,14 +229,14 @@
     position: absolute;
 }
 .toggle1-silver {
-    background: url(/resources/toggle1_silver.png{{{ns}}});
+    background: url(/resources/img/toggle1_silver.png{{{ns}}});
     height: 20px;
     position: absolute;
     width: 30px;
 }
 
 .toggle2_silver-silver {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -266,7 +266,7 @@
 /* Screw */
 
 .calf .screw_min {
-    background: url(/resources/screw1.png{{{ns}}});
+    background: url(/resources/img/screw1.png{{{ns}}});
     background-size: 15px;
     height: 15px;
     position: absolute;
@@ -303,7 +303,7 @@
 /* button of bypass */
 
 .calf .button-bypass {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -325,7 +325,7 @@
 
 
 .calf-filterclavier .mode {
-    background: url(/resources/room-size-two.png{{{ns}}});
+    background: url(/resources/img/room-size-two.png{{{ns}}});
     top: 225px;
     height: 31px;
     left: 285px;
@@ -381,7 +381,7 @@
 /* frq - disable */
 
 .calf-filterclavier .freq-response {
-    background: url(/resources/disable-freq.png{{{ns}}}) no-repeat center;
+    background: url(/resources/img/disable-freq.png{{{ns}}}) no-repeat center;
     height: 194px;
     position: absolute;
     left: 180px;
@@ -416,7 +416,7 @@
     right: 0
 }
 .calf-filterclavier .display {
-    background: url(/resources/combo-sm.png{{{ns}}});
+    background: url(/resources/img/combo-sm.png{{{ns}}});
     top: 181px;
     background-size: 50px auto;
     height: 28px;
@@ -436,7 +436,7 @@
     position: absolute;
 }
 .calf-filterclavier .slider-horiz {
-    background: url(/resources/sliders-vert-disable2.png{{{ns}}});
+    background: url(/resources/img/sliders-vert-disable2.png{{{ns}}});
     background-size: auto 152px;
     height: 152px;
     position: absolute;
