--- a/plugins-fixed/calf-bad.lv2/modgui/Flanger/icon-calf-flanger.css
+++ b/plugins-fixed/calf-bad.lv2/modgui/Flanger/icon-calf-flanger.css
@@ -1,6 +1,6 @@
 /* Global */
 .calf {
-    background: url(/resources/background_dark.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_dark.png{{{ns}}}) repeat;
     position: relative;
     color: #FFF;
 }
@@ -8,7 +8,7 @@
 /* bar top */
 
 .calf.calf-flanger .bar-top {
-    background: url(/resources/background_black.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_black.png{{{ns}}}) repeat;
     height: 46px;
     left: 0;
     position: absolute;
@@ -24,7 +24,7 @@
     top: 13px;
 }
 .calf .bar-top .off-or-on-calf {
-    background-image: url(/resources/toggle2_silver.png{{{ns}}});
+    background-image: url(/resources/img/toggle2_silver.png{{{ns}}});
     background-size: 46px 62px;
     cursor: pointer;
     height: 31px;
@@ -78,7 +78,7 @@
 }
 /*bars left*/
 .calf .groups-bar-left {
-    background: url(/resources/side_w.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_w.png{{{ns}}}) repeat-y;
     bottom: 0;
     left: 0;
     position: absolute;
@@ -87,7 +87,7 @@
 }
 
 .calf .groups-bar-left .top {
-    background: url(/resources/side_nw.png{{{ns}}});
+    background: url(/resources/img/side_nw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -95,7 +95,7 @@
     width: 56px;
 }
 .calf .groups-bar-left .bottom {
-    background: url(/resources/side_sw.png{{{ns}}});
+    background: url(/resources/img/side_sw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -105,7 +105,7 @@
 
 /* bars right */
 .calf .groups-bar-right {
-    background: url(/resources/side_e.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_e.png{{{ns}}}) repeat-y;
     bottom: 0;
     right: 0;
     position: absolute;
@@ -114,7 +114,7 @@
 }
 
 .calf .groups-bar-right .top {
-    background: url(/resources/side_ne.png{{{ns}}});
+    background: url(/resources/img/side_ne.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -123,7 +123,7 @@
 }
 
 .calf .groups-bar-right .bottom {
-    background: url(/resources/side_se.png{{{ns}}});
+    background: url(/resources/img/side_se.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -131,7 +131,7 @@
     width: 56px;
 }
 .calf .groups-bar-right .logo {
-    background: url(/resources/side_e_logo.png{{{ns}}});
+    background: url(/resources/img/side_e_logo.png{{{ns}}});
     height: 90px;
     left: 0;
     position: absolute;
@@ -170,22 +170,22 @@
     margin: auto;
 }
 .calf .knob1-1 {
-    background: url(/resources/knob1-1.png{{{ns}}});
+    background: url(/resources/img/knob1-1.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-2 {
-    background: url(/resources/knob1-2.png{{{ns}}});
+    background: url(/resources/img/knob1-2.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-3 {
-    background: url(/resources/knob1-3.png{{{ns}}});
+    background: url(/resources/img/knob1-3.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-4 {
-    background: url(/resources/knob1-4.png{{{ns}}});
+    background: url(/resources/img/knob1-4.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
@@ -195,22 +195,22 @@
     margin: auto;
 }
 .calf .knob2-1 {
-    background: url(/resources/knob2-1.png{{{ns}}});
+    background: url(/resources/img/knob2-1.png{{{ns}}});
 }
 .calf .knob2-2 {
-    background: url(/resources/knob2-2.png{{{ns}}});
+    background: url(/resources/img/knob2-2.png{{{ns}}});
 }
 .calf .knob2-3 {
-    background: url(/resources/knob2-3.png{{{ns}}});
+    background: url(/resources/img/knob2-3.png{{{ns}}});
 }
 .calf .knob2-4 {
-    background: url(/resources/knob2-4.png{{{ns}}});
+    background: url(/resources/img/knob2-4.png{{{ns}}});
 }
 .calf .knob3 {
     height: 60px;
     width: 60px;
     margin: auto;
-    background: url(/resources/knob3.png{{{ns}}});
+    background: url(/resources/img/knob3.png{{{ns}}});
 }
 .calf .knob4 {
     height: 80px;
@@ -218,16 +218,16 @@
     margin: auto;
 }
 .calf .knob4-1 {
-    background: url(/resources/knob4-1.png{{{ns}}});
+    background: url(/resources/img/knob4-1.png{{{ns}}});
 }
 .calf .knob4-2 {
-    background: url(/resources/knob4-2.png{{{ns}}});
+    background: url(/resources/img/knob4-2.png{{{ns}}});
 }
 .calf .knob4-3 {
-    background: url(/resources/knob4-3.png{{{ns}}});
+    background: url(/resources/img/knob4-3.png{{{ns}}});
 }
 .calf .knob4-4 {
-    background: url(/resources/knob4-4.png{{{ns}}});
+    background: url(/resources/img/knob4-4.png{{{ns}}});
 }
 .calf .knob5 {
     height: 100px;
@@ -235,16 +235,16 @@
     margin: auto;
 }
 .calf .knob5-1 {
-    background: url(/resources/knob5-1.png{{{ns}}});
+    background: url(/resources/img/knob5-1.png{{{ns}}});
 }
 .calf .knob5-2 {
-    background: url(/resources/knob5-2.png{{{ns}}});
+    background: url(/resources/img/knob5-2.png{{{ns}}});
 }
 .calf .knob5-3 {
-    background: url(/resources/knob5-3.png{{{ns}}});
+    background: url(/resources/img/knob5-3.png{{{ns}}});
 }
 .calf .knob5-4 {
-    background: url(/resources/knob5-4.png{{{ns}}});
+    background: url(/resources/img/knob5-4.png{{{ns}}});
 }
 
 /* titles of things */
@@ -254,14 +254,14 @@
     font-size: 10px;
 }
 .toggle1-silver {
-    background: url(/resources/toggle1_silver.png{{{ns}}});
+    background: url(/resources/img/toggle1_silver.png{{{ns}}});
     height: 20px;
     position: absolute;
     width: 30px;
 }
 
 .toggle2_silver-silver {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -290,7 +290,7 @@
 /* Screw */
 
 .calf .screw_min {
-    background: url(/resources/screw1.png{{{ns}}});
+    background: url(/resources/img/screw1.png{{{ns}}});
     background-size: 15px;
     height: 15px;
     position: absolute;
@@ -306,7 +306,7 @@
 /* button of bypass */
 
 .calf .button-bypass {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -345,14 +345,14 @@
     float: left;
 }
 .calf-flanger .toggle .small {
-    background-image: url(/resources/toggle1_silver.png{{{ns}}});
+    background-image: url(/resources/img/toggle1_silver.png{{{ns}}});
 margin: auto;
     height: 20px;
     width: 30px;
     cursor: pointer;
 }
 .calf-flanger .toggle .mid {
-    background-image: url(/resources/toggle2_silver.png{{{ns}}});
+    background-image: url(/resources/img/toggle2_silver.png{{{ns}}});
     margin: auto;
     height: 40px;
     width: 60px;
@@ -367,7 +367,7 @@ margin: auto;
 }
 
 .calf-flanger .slider-horiz {
-    background: url(/resources/sliders-vert-disable2.png{{{ns}}});
+    background: url(/resources/img/sliders-vert-disable2.png{{{ns}}});
     background-size: auto 114px;
     height: 114px;
     margin: auto;
@@ -382,7 +382,7 @@ line-height: 16px;
 font-style: italic
 }
 .calf-flanger .display {
-    background: url(/resources/combo-sm.png{{{ns}}});
+    background: url(/resources/img/combo-sm.png{{{ns}}});
     top: 181px;
     background-size: 50px auto;
     height: 28px;
