--- a/plugins-fixed/calf-bad.lv2/modgui/Monosynth/icon-calf-monosynth.css
+++ b/plugins-fixed/calf-bad.lv2/modgui/Monosynth/icon-calf-monosynth.css
@@ -1,5 +1,5 @@
 .calf {
-    background: url(/resources/background_dark.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_dark.png{{{ns}}}) repeat;
     position: relative;
     color: #FFF;
 }
@@ -7,7 +7,7 @@
 /* bar top */
 
 .calf .bar-top {
-    background: url(/resources/background_black.png{{{ns}}}) repeat;
+    background: url(/resources/img/background_black.png{{{ns}}}) repeat;
     height: 46px;
     left: 0;
     position: absolute;
@@ -23,7 +23,7 @@
     top: 13px;
 }
 .calf .bar-top .off-or-on-calf {
-    background-image: url(/resources/toggle2_silver.png{{{ns}}});
+    background-image: url(/resources/img/toggle2_silver.png{{{ns}}});
     background-size: 46px 62px;
     cursor: pointer;
     height: 31px;
@@ -58,7 +58,7 @@
 
 /*bars left*/
 .calf .groups-bar-left {
-    background: url(/resources/side_w.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_w.png{{{ns}}}) repeat-y;
     bottom: 0;
     left: 0;
     position: absolute;
@@ -67,7 +67,7 @@
 }
 
 .calf .groups-bar-left .top {
-    background: url(/resources/side_nw.png{{{ns}}});
+    background: url(/resources/img/side_nw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -75,7 +75,7 @@
     width: 56px;
 }
 .calf .groups-bar-left .bottom {
-    background: url(/resources/side_sw.png{{{ns}}});
+    background: url(/resources/img/side_sw.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -85,7 +85,7 @@
 
 /* bars right */
 .calf .groups-bar-right {
-    background: url(/resources/side_e.png{{{ns}}}) repeat-y;
+    background: url(/resources/img/side_e.png{{{ns}}}) repeat-y;
     bottom: 0;
     right: 0;
     position: absolute;
@@ -94,7 +94,7 @@
 }
 
 .calf .groups-bar-right .top {
-    background: url(/resources/side_ne.png{{{ns}}});
+    background: url(/resources/img/side_ne.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -103,7 +103,7 @@
 }
 
 .calf .groups-bar-right .bottom {
-    background: url(/resources/side_se.png{{{ns}}});
+    background: url(/resources/img/side_se.png{{{ns}}});
     height: 36px;
     left: 0;
     position: absolute;
@@ -111,7 +111,7 @@
     width: 56px;
 }
 .calf .groups-bar-right .logo {
-    background: url(/resources/side_e_logo.png{{{ns}}});
+    background: url(/resources/img/side_e_logo.png{{{ns}}});
     height: 90px;
     left: 0;
     position: absolute;
@@ -147,22 +147,22 @@
     width: 20px;
 }
 .calf .knob1-1 {
-    background: url(/resources/knob1-1.png{{{ns}}});
+    background: url(/resources/img/knob1-1.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-2 {
-    background: url(/resources/knob1-2.png{{{ns}}});
+    background: url(/resources/img/knob1-2.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-3 {
-    background: url(/resources/knob1-3.png{{{ns}}});
+    background: url(/resources/img/knob1-3.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
 .calf .knob1-4 {
-    background: url(/resources/knob1-4.png{{{ns}}});
+    background: url(/resources/img/knob1-4.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
@@ -171,24 +171,24 @@
     width: 40px;
 }
 .calf .knob2-1 {
-    background: url(/resources/knob2-1.png{{{ns}}});
+    background: url(/resources/img/knob2-1.png{{{ns}}});
 }
 .calf .knob2-2 {
-    background: url(/resources/knob2-2.png{{{ns}}});
+    background: url(/resources/img/knob2-2.png{{{ns}}});
 }
 .calf .knob2-3 {
-    background: url(/resources/knob2-3.png{{{ns}}});
+    background: url(/resources/img/knob2-3.png{{{ns}}});
 }
 .calf .knob2-4 {
-    background: url(/resources/knob2-4.png{{{ns}}});
+    background: url(/resources/img/knob2-4.png{{{ns}}});
 }
 .calf .knob3 {
-    background: url(/resources/knob3.png{{{ns}}});
+    background: url(/resources/img/knob3.png{{{ns}}});
     height: 60px;
     width: 60px;
 }
 .calf .knob3-1 {
-    background: url(/resources/knob3-1.png{{{ns}}});
+    background: url(/resources/img/knob3-1.png{{{ns}}});
 }
 
 .calf .knob4 {
@@ -196,32 +196,32 @@
     width: 80px;
 }
 .calf .knob4-1 {
-    background: url(/resources/knob4-1.png{{{ns}}});
+    background: url(/resources/img/knob4-1.png{{{ns}}});
 }
 .calf .knob4-2 {
-    background: url(/resources/knob4-2.png{{{ns}}});
+    background: url(/resources/img/knob4-2.png{{{ns}}});
 }
 .calf .knob4-3 {
-    background: url(/resources/knob4-3.png{{{ns}}});
+    background: url(/resources/img/knob4-3.png{{{ns}}});
 }
 .calf .knob4-4 {
-    background: url(/resources/knob4-4.png{{{ns}}});
+    background: url(/resources/img/knob4-4.png{{{ns}}});
 }
 .calf .knob5 {
     height: 100px;
     width: 100px;
 }
 .calf .knob5-1 {
-    background: url(/resources/knob5-1.png{{{ns}}});
+    background: url(/resources/img/knob5-1.png{{{ns}}});
 }
 .calf .knob5-2 {
-    background: url(/resources/knob5-2.png{{{ns}}});
+    background: url(/resources/img/knob5-2.png{{{ns}}});
 }
 .calf .knob5-3 {
-    background: url(/resources/knob5-3.png{{{ns}}});
+    background: url(/resources/img/knob5-3.png{{{ns}}});
 }
 .calf .knob5-4 {
-    background: url(/resources/knob5-4.png{{{ns}}});
+    background: url(/resources/img/knob5-4.png{{{ns}}});
 }
 
 /* titles of things */
@@ -232,14 +232,14 @@
     position: relative !important
 }
 .toggle1-silver {
-    background: url(/resources/toggle1_silver.png{{{ns}}});
+    background: url(/resources/img/toggle1_silver.png{{{ns}}});
     height: 20px;
     position: absolute;
     width: 30px;
 }
 
 .toggle2_silver-silver {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -265,7 +265,7 @@
 /* Slider */
 
 .calf .slider2-horiz {
-    background: url(/resources/slider2-horiz.png{{{ns}}});
+    background: url(/resources/img/slider2-horiz.png{{{ns}}});
     height: 36px;
     position: absolute;
     width: 46px;
@@ -273,7 +273,7 @@
 /* Screw */
 
 .calf .screw_min {
-    background: url(/resources/screw1.png{{{ns}}});
+    background: url(/resources/img/screw1.png{{{ns}}});
     background-size: 15px;
     height: 15px;
     position: absolute;
@@ -290,7 +290,7 @@
 /* button of bypass */
 
 .calf .button-bypass {
-    background: url(/resources/toggle2_silver.png{{{ns}}});
+    background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
     width: 60px;
@@ -351,7 +351,7 @@
     width: 415px;
 }
 .calf-monosynth .frequency-response .freque-response-graph {
-    background: url(/resources/img/disable-freq.png{{{ns}}});
+    background: url(/resources/img/img/disable-freq.png{{{ns}}});
     height: 176px;
     left: 13px;
     position: absolute;
@@ -359,7 +359,7 @@
     width: 387px;
 }
 .calf-monosynth .mod-enumerated {
-    background: url(/resources/room-size-two.png{{{ns}}});
+    background: url(/resources/img/room-size-two.png{{{ns}}});
     height: 31px;
     background-size: 160px 31px;
     z-index: 100000 !important;
@@ -401,7 +401,7 @@
     width: 145px; 
 }
 .calf-monosynth .mod-enumerated:hover, .calf-monosynth .mod-enumerated:active {
-    background: url(/resources/room-size-hover-two.png{{{ns}}}) no-repeat;
+    background: url(/resources/img/room-size-hover-two.png{{{ns}}}) no-repeat;
     width: 160px;
     background-size: 160px 31px;
 
@@ -423,7 +423,7 @@ background-color: rgba(0,0,0,0.5);
 height: 2em;
 border-top-left-radius: 0.5em;
 border-top-right-radius: 0.5em;
-background-image: url(resources/led_inactive.png{{{ns}}});
+background-image: url(/resources/img/led_inactive.png{{{ns}}});
 background-repeat: no-repeat;
 background-position: 8em 2px;
 padding-top: 0.5em;
@@ -438,7 +438,7 @@ padding-top: 0.5em;
     display: none;
   }
   [id^="tab"]:checked + label { 
-    background-image: url(resources/led_active.png{{{ns}}});
+    background-image: url(/resources/img/led_active.png{{{ns}}});
   }
   [id^="tab"]:checked ~ .tab_content{
     display: block;
@@ -540,7 +540,7 @@ padding-top: 0.5em;
     top: 32px;
 }
 .calf-monosynth .disable {
-    background: url(/resources/img/media_des.png{{{ns}}});
+    background: url(/resources/img/img/media_des.png{{{ns}}});
     height: 18px;
     position: absolute;
     width: 153px;
@@ -563,7 +563,7 @@ padding-top: 0.5em;
     z-index: -2;
 }
 .calf-monosynth .slider-vert {
-    background: url(/resources/sliders-vert-disable.png{{{ns}}});
+    background: url(/resources/img/sliders-vert-disable.png{{{ns}}});
     height: 122px;
     left: 0;
     cursor: pointer;
@@ -597,7 +597,7 @@ padding-top: 0.5em;
 /* Active */
 
 .calf-monosynth .active {
-    background: url(/resources/toggle1_silver.png{{{ns}}}) 0 20px;
+    background: url(/resources/img/toggle1_silver.png{{{ns}}}) 0 20px;
     margin: 163px 37px;
     height: 20px;
     right: 0px;
