--- a/plugins-fixed/calf.lv2/modgui-compressor/icon-calf-compressor.css
+++ b/plugins-fixed/calf.lv2/modgui-compressor/icon-calf-compressor.css
@@ -1,5 +1,5 @@
-/* Global */
-.calf {
+/* Common calf rules */
+.calf-compressor {
     background: url(/resources/img/background_dark.png{{{ns}}}) repeat;
     position: relative;
     color: #FFF;
@@ -7,7 +7,7 @@
 
 /* bar top */
 
-.calf.calf-compressor .bar-top {
+.calf-compressor .bar-top {
     background: url(/resources/img/background_black.png{{{ns}}}) repeat;
     height: 46px;
     left: 0;
@@ -15,19 +15,19 @@
     top: 0;
     width: 100%;
 }
-.calf .clearfix {
+.calf-compressor .clearfix {
     float: none;
     width: 100% !important;
     clear: both !important;
 } 
-.calf .bar-top .title-calf {
+.calf-compressor .bar-top .title-calf {
     color: #FFF;
     display: block;
     left: 35px;
     position: absolute;
     top: 13px;
 }
-.calf .bar-top .off-or-on-calf {
+.calf-compressor .bar-top .off-or-on-calf {
     background-image: url(/resources/img/toggle2_silver.png{{{ns}}});
     background-size: 46px 62px;
     cursor: pointer;
@@ -38,22 +38,22 @@
     top: 7px;
     width: 46px;
 }
-.calf .bar-top .on {
+.calf-compressor .bar-top .on {
     background-position: top center;
 }
-.calf .bar-top .off {
+.calf-compressor .bar-top .off {
     background-position: bottom center;
 }
-.calf .bar-top .off-or-on-calf span {
+.calf-compressor .bar-top .off-or-on-calf span {
     color: #FFF;
     left: -50px;
     position: absolute;
     top: 9px;
 }
 
-/* Global calf div */
+/* Common calf div */
 
-.calf .global-calf {
+.calf-compressor .calf-compressor-wrapper {
     bottom: 0;
     left: 0;
     position: absolute;
@@ -61,31 +61,31 @@
     top: 46px;
 }
 /* group */
-.calf.calf-compressor .calf-control-group {
+.calf-compressor .calf-control-group {
     width: 240px;
     margin: 15px auto 10px auto;
     z-index: 100000;
     position: relative !important;
 }
-.calf.calf-compressor .calf-control-group.a {
+.calf-compressor .calf-control-group.a {
     height: 280px
 }
-.calf.calf-compressor .calf-control-group.a .knob {
+.calf-compressor .calf-control-group.a .knob {
     margin: 0;
     width: 75px;
 }
-.calf.calf-compressor .calf-control-group.b .knob {
+.calf-compressor .calf-control-group.b .knob {
     margin: 0 0 6px 0;
     width: 92px;
 }
-.calf.calf-compressor .calf-control-group.b .knob .knob2 {
+.calf-compressor .calf-control-group.b .knob .knob2 {
     margin: auto;
 }
-.calf .pull-right {
+.calf-compressor .pull-right {
     float: right !important;
 }
 /*bars left*/
-.calf .groups-bar-left {
+.calf-compressor .groups-bar-left {
     background: url(/resources/img/side_w.png{{{ns}}}) repeat-y;
     bottom: 0;
     left: 0;
@@ -94,7 +94,7 @@
     width: 56px;
 }
 
-.calf .groups-bar-left .top {
+.calf-compressor .groups-bar-left .top {
     background: url(/resources/img/side_nw.png{{{ns}}});
     height: 36px;
     left: 0;
@@ -102,7 +102,7 @@
     top: 0;
     width: 56px;
 }
-.calf .groups-bar-left .bottom {
+.calf-compressor .groups-bar-left .bottom {
     background: url(/resources/img/side_sw.png{{{ns}}});
     height: 36px;
     left: 0;
@@ -112,7 +112,7 @@
 }
 
 /* bars right */
-.calf .groups-bar-right {
+.calf-compressor .groups-bar-right {
     background: url(/resources/img/side_e.png{{{ns}}}) repeat-y;
     bottom: 0;
     right: 0;
@@ -121,7 +121,7 @@
     width: 56px;
 }
 
-.calf .groups-bar-right .top {
+.calf-compressor .groups-bar-right .top {
     background: url(/resources/img/side_ne.png{{{ns}}});
     height: 36px;
     left: 0;
@@ -130,7 +130,7 @@
     width: 56px;
 }
 
-.calf .groups-bar-right .bottom {
+.calf-compressor .groups-bar-right .bottom {
     background: url(/resources/img/side_se.png{{{ns}}});
     height: 36px;
     left: 0;
@@ -138,7 +138,7 @@
     bottom: 0;
     width: 56px;
 }
-.calf .groups-bar-right .logo {
+.calf-compressor .groups-bar-right .logo {
     background: url(/resources/img/side_e_logo.png{{{ns}}});
     height: 90px;
     left: 0;
@@ -149,11 +149,11 @@
 
 /* cols */
 
-.calf .border-solid-and-radius {
+.calf-compressor .border-solid-and-radius {
     border: solid 1px #FFF;
     border-radius: 7px;
 }
-.calf .title-of-cols {
+.calf-compressor .title-of-cols {
     background: #384454;
     color: #FFF;
     font-size: 13px;
@@ -165,99 +165,99 @@
 
 /* knob */
 
-.calf.calf-compressor .knob {
+.calf-compressor .knob {
     cursor: pointer;
     float: left;
     position: relative;
     text-align: center;
     font-size: 10px;
 }
-.calf .knob1 {
+.calf-compressor .knob1 {
     height: 20px;
     width: 20px;
     margin: auto;
 }
-.calf .knob1-1 {
+.calf-compressor .knob1-1 {
     background: url(/resources/img/knob1-1.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
-.calf .knob1-2 {
+.calf-compressor .knob1-2 {
     background: url(/resources/img/knob1-2.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
-.calf .knob1-3 {
+.calf-compressor .knob1-3 {
     background: url(/resources/img/knob1-3.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
-.calf .knob1-4 {
+.calf-compressor .knob1-4 {
     background: url(/resources/img/knob1-4.png{{{ns}}});
     height: 20px;
     width: 20px;
 }
-.calf .knob2 {
+.calf-compressor .knob2 {
     height: 40px;
     width: 40px;
     margin: auto;
 }
-.calf .knob2-1 {
+.calf-compressor .knob2-1 {
     background: url(/resources/img/knob2-1.png{{{ns}}});
 }
-.calf .knob2-2 {
+.calf-compressor .knob2-2 {
     background: url(/resources/img/knob2-2.png{{{ns}}});
 }
-.calf .knob2-3 {
+.calf-compressor .knob2-3 {
     background: url(/resources/img/knob2-3.png{{{ns}}});
 }
-.calf .knob2-4 {
+.calf-compressor .knob2-4 {
     background: url(/resources/img/knob2-4.png{{{ns}}});
 }
-.calf .knob3 {
+.calf-compressor .knob3 {
     height: 60px;
     width: 60px;
     margin: auto;
     background: url(/resources/img/knob3.png{{{ns}}});
 }
-.calf .knob4 {
+.calf-compressor .knob4 {
     height: 80px;
     width: 80px;
     margin: auto;
 }
-.calf .knob4-1 {
+.calf-compressor .knob4-1 {
     background: url(/resources/img/knob4-1.png{{{ns}}});
 }
-.calf .knob4-2 {
+.calf-compressor .knob4-2 {
     background: url(/resources/img/knob4-2.png{{{ns}}});
 }
-.calf .knob4-3 {
+.calf-compressor .knob4-3 {
     background: url(/resources/img/knob4-3.png{{{ns}}});
 }
-.calf .knob4-4 {
+.calf-compressor .knob4-4 {
     background: url(/resources/img/knob4-4.png{{{ns}}});
 }
-.calf .knob5 {
+.calf-compressor .knob5 {
     height: 100px;
     width: 100px;
     margin: auto;
 }
-.calf .knob5-1 {
+.calf-compressor .knob5-1 {
     background: url(/resources/img/knob5-1.png{{{ns}}});
 }
-.calf .knob5-2 {
+.calf-compressor .knob5-2 {
     background: url(/resources/img/knob5-2.png{{{ns}}});
 }
-.calf .knob5-3 {
+.calf-compressor .knob5-3 {
     background: url(/resources/img/knob5-3.png{{{ns}}});
 }
-.calf .knob5-4 {
+.calf-compressor .knob5-4 {
     background: url(/resources/img/knob5-4.png{{{ns}}});
 }
 
 /* titles of things */
 
-.calf .title-field{
+.calf-compressor .title-field{
     color: #FFF;
     font-size: 10px;
 }
@@ -275,19 +275,26 @@
     width: 60px;
 }
 
-.calf .knob1 .title-knob1-top, .calf .knob2 .title-knob2-top, .calf .knob3 .title-knob3-top, .calf .knob4 .title-knob4-top,
-.calf .knob5 .title-knob5-top, .calf .knob1 .title-knob1-bottom, .calf .knob2 .title-knob2-bottom, .calf .knob3 .title-knob3-bottom, .calf .knob4 .title-knob4-bottom,
-.calf .knob5 .title-knob5-bottom {
+.calf-compressor .knob1 .title-knob1-top,
+.calf-compressor .knob2 .title-knob2-top,
+.calf-compressor .knob3 .title-knob3-top,
+.calf-compressor .knob4 .title-knob4-top,
+.calf-compressor .knob5 .title-knob5-top,
+.calf-compressor .knob1 .title-knob1-bottom,
+.calf-compressor .knob2 .title-knob2-bottom,
+.calf-compressor .knob3 .title-knob3-bottom,
+.calf-compressor .knob4 .title-knob4-bottom,
+.calf-compressor .knob5 .title-knob5-bottom {
     color: #FFFFFF;
     font-size: 11px;
     text-align: center;
 }
 
 /* Lines */
-.calf .line-cols-all {
+.calf-compressor .line-cols-all {
     position: absolute;
 }
-.calf span.value-lines{
+.calf-compressor span.value-lines{
     font-size: 11px;
     left: 0;
     right: 0;
@@ -297,7 +304,7 @@
 /* Slider */
 /* Screw */
 
-.calf .screw_min {
+.calf-compressor .screw_min {
     background: url(/resources/img/screw1.png{{{ns}}});
     background-size: 15px;
     height: 15px;
@@ -307,13 +314,13 @@
 
 }
 /* titles of things */
-.calf .title-fild-bottom {
+.calf-compressor .title-fild-bottom {
     font-size: 12px;
 }
 
 /* button of bypass */
 
-.calf .button-bypass {
+.calf-compressor .button-bypass {
     background: url(/resources/img/toggle2_silver.png{{{ns}}});
     height: 40px;
     position: absolute;
@@ -383,11 +390,11 @@
 }
 
 .calf-compressor .slider small {
-float: left;
-display: inline;
-margin: -16px 0 0 50px;
-line-height: 16px;
-font-style: italic
+    float: left;
+    display: inline;
+    margin: -16px 0 0 50px;
+    line-height: 16px;
+    font-style: italic
 }
 .calf-compressor .display {
     background: url(/resources/img/combo-sm.png{{{ns}}});
