Workaround for old webkit browsers

--- a/plugins/eg-sampler.lv2/modgui/stylesheet-eg-sampler.css
+++ b/plugins/eg-sampler.lv2/modgui/stylesheet-eg-sampler.css
@@ -105,7 +105,12 @@
 
 .mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob > div {
     display:flex;
-    justify-content:space-evenly;
+    justify-content:space-around;
+}
+@supports (display: grid) {
+    .mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob > div {
+        justify-content:space-evenly;
+    }
 }
 
 .mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob > div > span.mod-knob-title {
